syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";


message UserHeartbeatRequest {
    google.protobuf.Timestamp date = 1;
}
